Make blue darker for contrast issues

--- a/web/app/themes/brookhouse/assets/scss/variables.scss
+++ b/web/app/themes/brookhouse/assets/scss/variables.scss
@@ -6,7 +6,7 @@ $beige-light: #eadfde;
 
 $beige-dark: #847462;
 
-$blue: #1d70b8;
+$blue: #1C6CB3;
 
 $blue-pale: #b8c8dc;
 
